--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 
 <body>
     <canvas id="myCanvas" width="480" height="700"></canvas>
+    <div class="controls">
+        <div class="control" id="left">
+
+        </div>
+        <div class="control" id="right">
+
+        </div>
+    </div>
 </body>
 
 </html>
