--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
     <title>Gioco della Gallina</title>
     <script src="js/main.js"></script>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="preload" href="fonts/NerdFont.ttf" as="font" type="font/ttf" crossorigin>
+
 </head>
 
 <body>
-    <canvas id="myCanvas" width="480" height="700"></canvas>
+    <canvas id="myCanvas" width="480" height="550"></canvas>
     <div class="controls">
         <div class="control" id="left">
-
+            &lt;
         </div>
         <div class="control" id="right">
-
+            &gt;
         </div>
     </div>
 </body>
