refractor and lore

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gioco della Gallina</title>
-    <script src="js/main.js"></script>
     <link rel="stylesheet" href="css/index.css">
     <link rel="preload" href="fonts/NerdFont.ttf" as="font" type="font/ttf" crossorigin>
-
+    <script type="module" src="./js/main.js"></script>
 </head>
 
 <body>
